# ParticleSimulation

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  create_plots.ps1  run_simulation.ps1
ParticleSimulation/: CMakeLists.txt  ParticleSimulation.cpp  ParticleSimulation.h  RK4Stepper.h
gpu/: .gitignore  Makefile  common.h  conversions.cu  conversions.cuh  disk_sampler_linear.cu  disk_sampler_linear.cuh  ext_field_bind.cu  ext_field_bind.cuh  external_fields.cu  external_fields.cuh  helper_macros.h  main.cu  measure_time.cuh  pm.cu  pm.cuh  settings.cuh  state_recorder.cu  state_recorder.cuh  triple.cuh  utils.cu  utils.cuh  vec3.cu  vec3.cuh
include/: FFTAdapter.h  FFTWAdapter.h  RK4Stepper.h  abstractStepper.h  barnesHut.h  chainingMesh.h  demos.h  diskSampler.h  diskSamplerLinear.h  externalFields.h  greensFunctions.h  grid.h  kissFFTAdapter.h  leapfrog.h  measureTime.h  p3mMethod.h  particle.h  plummerSampler.h  pmConfig.h  pmMethod.h  pocketfftAdapter.h  ppMethod.h  simInfo.h  sphericalSampler.h  stateRecorder.h  unitConversions.h  unit_conversions.h  utils.h  vec3.h
include_gpu/: PMMethodGPU.h  complexGPU.cuh  cuFFTAdapter.cuh  gridGPU.cuh  leapfrogGPU.cuh  measureTime.cuh  triple.cuh  unitConversionsGPU.cuh  vec3GPU.cuh
libs/fftw/: libfftw3f-3.exp  libfftw3f-3.lib
libs/glew/: CMakeLists.txt
libs/kissfft/: CMakeLists.txt
libs/pocketfft/: CMakeLists.txt
results/: disk_linear.py  disk_uniform.py  field_in_disk_linear.py  interpolation.py  ode.ipynb  plummer.py  results.md  spherical_linear.py  z_order.py
results/time-integration/: area_conservation_comp.py  euler.py  finite_diff.py  leapfrog.py  leapfrog_anim.py
script/: animate.py  animate2d.py  anisotropy.py  assignment_schemes.py  bh_accuracy.py  bh_tree_time.py  bh_z_order_time.py  compare_file.py  conserved_quantities.py  draw_orbits.py  finite_diff_rel_error.py  fit_time.py  load_data.py  optimal_assignments.py  p3m_accuracy.py  p3m_accuracy_shapes.py  plot_field.py  plot_time.py  plot_time_p3m.py  plot_time_q_vs_m.py  plot_times_p3m_threads.py  pm_accuracy.py  pm_optimal.py  pm_ref_approx_qual.py  poor_man_vs_laplace.py  show_last.py  time_methods.py  time_pm.ps1  time_pm_fft.py  time_pp.py
source/: CMakeLists.txt  FFTWAdapter.cpp  PMMethodGPU.cu  abstractStepper.h  barnesHut.cpp  chainingMesh.cpp  cuFFTAdapter.cu  demos.cpp  diskSampler.cpp  diskSamplerLinear.cpp  externalFields.cpp  greensFunctions.cpp  grid.cpp  grid.h  gridGPU.cu  kissFFTAdapter.h  leapfrog.cpp  leapfrogGPU.cu  main.cpp  p3mMethod.cpp  particle.cpp  plummerSampler.cpp  pmMethod.cpp  pmMethod.h  ppMethod.cpp  ppMethod.h  printCudaVersion.cu  simInfo.cpp  simInfo.h  sphericalSampler.cpp  stateRecorder.cpp  stateRecorder.h  unitConversions.cpp  unitConversionsGPU.cu  unit_conversions.cpp  utils.cpp  vec3.cpp  vec3.h
test/: CMakeLists.txt  RK4Test.cpp  barnesHutTest.cpp  fftAdaptersTest.cpp  pocketfftAdapterTest.cpp
timing/: bh_time_standard.txt  bh_time_z_order.txt  bh_tree_standard.txt  bh_tree_z_order.txt  p3m_12_thread_time.txt  p3m_1_thread_time.txt  p3m_4_thread_time.txt  p3m_8_thread_time.txt  p3m_time.txt  pm_time_cpu.txt  pm_time_gpu.txt  pp_time.txt
